# fastApiProject

./: config.py  exceptions.py  main.py  mongo.py  pyproject.toml
